--- a/dbt_ecommerce_project/dbt_project.yml
+++ b/dbt_ecommerce_project/dbt_project.yml
@@ -30,5 +30,6 @@ clean-targets: # directories to be removed by `dbt clean`
 models:
     dbt_ecommerce_project:
         # Config indicated by + and applies to all files under models/example/
-        example:
+        staging:
             +materialized: view
+            +schema: staging
