Switching to bigquery and updating readme

--- a/dbt_ecommerce_project/models/staging/olist/_olist__sources.yml
+++ b/dbt_ecommerce_project/models/staging/olist/_olist__sources.yml
@@ -3,7 +3,7 @@ version: 2
 sources:
     - name: olist
       description: "Raw data from Olist E-commerce loaded by Python."
-      database: "{{ env_var('POSTGRES_DB', 'olist_db') }}"
+      database: quick-magpie-481500-p9
       schema: raw_olist
       tables:
           - name: customers
